--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Version 1.3.0:
+ - Fixed release script: set version.
+
+Version 1.3.0:
  - Changed release path.
  - Config uart after initializing gpio (igbt and relay pins).
  - Add BOOTLOADER_COMPILATION flag so we can exclude headers from cs_Nordic.h (such as the ones for ADC).
